[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/delivery/magnet_delivery_tool.gd" type="Script" id=1]
[ext_resource path="res://scripts/components/theter_anchor.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=27]
rough = true
absorbent = true

[sub_resource type="CylinderShape" id=22]
height = 1.0

[sub_resource type="CylinderMesh" id=23]
height = 1.0

[sub_resource type="SphereShape" id=26]

[sub_resource type="PhysicsMaterial" id=29]
friction = 0.0

[sub_resource type="CylinderShape" id=24]
height = 1.0

[sub_resource type="CylinderMesh" id=25]
height = 1.0

[node name="MagnetDeliveryTool" type="Spatial"]
script = ExtResource( 1 )
theter_anchor_path = NodePath("TheterAnchor")
stickpoint_path = NodePath("Magnet/Stickpoint")
raycast_path = NodePath("Magnet/RayCast")

[node name="Magnet" type="RigidBody" parent="."]
collision_layer = 2
collision_mask = 3
mass = 10.0
physics_material_override = SubResource( 27 )

[node name="CollisionShape" type="CollisionShape" parent="Magnet"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 22 )

[node name="MeshInstance" type="MeshInstance" parent="Magnet/CollisionShape"]
mesh = SubResource( 23 )
skeleton = NodePath("../..")
material/0 = null

[node name="Area" type="Area" parent="Magnet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Magnet/Area"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 26 )

[node name="Stickpoint" type="Position3D" parent="Magnet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="TheterPoint" type="Position3D" parent="Magnet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0 )

[node name="RayCast" type="RayCast" parent="Magnet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, 0 )
cast_to = Vector3( 0, -0.1, 0 )
collision_mask = 2

[node name="TheterAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0 )
script = ExtResource( 2 )

[node name="HingeJoint" type="HingeJoint" parent="TheterAnchor"]
nodes/node_a = NodePath("../../Magnet")
nodes/node_b = NodePath("../AnchorBody")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="AnchorBody" type="RigidBody" parent="TheterAnchor"]
collision_layer = 2
collision_mask = 3
physics_material_override = SubResource( 29 )
gravity_scale = 0.0

[node name="CollisionShape" type="CollisionShape" parent="TheterAnchor/AnchorBody"]
transform = Transform( -2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, 0, 0, 0, 0.05, 0, -0.02, 0 )
shape = SubResource( 24 )

[node name="MeshInstance" type="MeshInstance" parent="TheterAnchor/AnchorBody/CollisionShape"]
mesh = SubResource( 25 )
material/0 = null

[connection signal="body_entered" from="Magnet/Area" to="Magnet" method="_on_body_entered"]
[connection signal="body_exited" from="Magnet/Area" to="Magnet" method="_on_body_exited"]
